[gd_scene load_steps=3 format=3 uid="uid://co80t37h0ipwu"]

[ext_resource type="Script" path="res://settings_overlay.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gear"]
bg_color = Color(0.8, 0.35, 0.1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SettingsOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_gear")
text = "âš™"

[node name="MenuOverlay" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -310.0
offset_top = -210.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MenuOverlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DevSpeedToggle" type="Button" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "Dev Speed Mode: OFF"

[node name="Spacer2" type="Control" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="MenuOverlay/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuOverlay/VBoxContainer/DevSpeedToggle" to="." method="_on_dev_speed_toggle_pressed"]
[connection signal="pressed" from="MenuOverlay/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
